# onnxmlflow

./: .gitignore  LICENSE  README.md  mlflow.db  pyproject.toml  skills.md  tools.md
.github/agents/: onnxmlflow.agent.md
.github/workflows/: publish.yml
conda.recipe/: meta.yaml
examples/: log_iris_model.py
src/onnxmlflow/: __init__.py  html_generator.py  logger.py  model_utils.py
src/onnxmlflow/templates/: viewer.html
tests/: create_test_model.py  test_logger.py
